--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Portfolio-Website</title>
+        <title>Zahid Rashid</title>
         <link rel="stylesheet" href="index.css">
         <link rel="stylesheet"
         href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -44,7 +44,7 @@
         <!-- about design -->
         <section class="about" id="about">
             <div class="about-img">
-                <img src="255.jpg">
+                <img src="images/255.jpg">
             </div>
             <div class="about-text">
                 <h2>About<span> Me</span></h2>
@@ -90,7 +90,7 @@
             </div>
             <div class="portfolio-content">
                 <div class="row">
-                    <img src="255.jpg">
+                    <img src="images/292.jpg">
                     <div class="layer">
                         <h5>Visual Design</h5>
                         <p>Check out 10 best Design's update for the top web design and Development companies.</p>
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <img src="255.jpg">
+                    <img src="images/292.jpg">
                     <div class="layer">
                         <h5>Visual Design</h5>
                         <p>Check out 10 best Design's update for the top web design and Development companies.</p>
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <img src="255.jpg">
+                    <img src="images/292.jpg">
                     <div class="layer">
                         <h5>Visual Design</h5>
                         <p>Check out 10 best Design's update for the top web design and Development companies.</p>
@@ -114,7 +114,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <img src="255.jpg">
+                    <img src="images/292.jpg">
                     <div class="layer">
                         <h5>Visual Design</h5>
                         <p>Check out 10 best Design's update for the top web design and Development companies.</p>
@@ -122,7 +122,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <img src="255.jpg">
+                    <img src="images/292.jpg">
                     <div class="layer">
                         <h5>Visual Design</h5>
                         <p>Check out 10 best Design's update for the top web design and Development companies.</p>
@@ -130,7 +130,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <img src="255.jpg">
+                    <img src="images/292.jpg">
                     <div class="layer">
                         <h5>Visual Design</h5>
                         <p>Check out 10 best Design's update for the top web design and Development companies.</p>
