--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 </div>
             </div>
             <div class="contact-form">
-                <form action="">
+                <form action="#">
                     <input type="name" placeholder="Your Name" required>
                     <input type="email" placeholder="Your Email Address" required>
                     <input type="" placeholder="Your Mobile Number" required>
