--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                     <a href="#" class="btn2"><span><i class='bx bx-play'></i></span>Watch My Work</a>
                 </dic>
             </div>
+            <div>
+                <img src="images/255.jpg" class="imgh">
+            </div>
         </section>
         <!-- about design -->
         <section class="about" id="about">
@@ -90,7 +93,39 @@
             </div>
             <div class="portfolio-content">
                 <div class="row">
-                    <img src="images/292.jpg">
+                    <img src="images/travel.png">
+                    <div class="layer">
+                        <h5>Travel Website</h5>
+                        <p>A simple travel website I designed using HTML and CSS for a local customer</p>
+                        <a href="#"><i class='bx bx-link-external'></i></a>
+                    </div>
+                </div>
+                <div class="row">
+                    <img src="images/unit.png">
+                    <div class="layer">
+                        <h5>Unit Converter</h5>
+                        <p>A tool website that helps to convert metres to different units.</p>
+                        <a href="https://kaleidoscopic-cucurucho-2e8520.netlify.app/"><i class='bx bx-link-external'></i></a>
+                    </div>
+                </div>
+                <div class="row">
+                    <img src="images/Screenshot (7).png">
+                    <div class="layer">
+                        <h5>Basketball ScoreCard</h5>
+                        <p>A simple frontend displaying the scorecard.</p>
+                        <a href="https://prismatic-sfogliatella-927924.netlify.app/"><i class='bx bx-link-external'></i></a>
+                    </div>
+                </div>
+                <div class="row">
+                    <img src="images/catwebs.png">
+                    <div class="layer">
+                        <h5>Cat Website</h5>
+                        <p>The website provides different pictures of cat.</p>
+                        <a href="#"><i class='bx bx-link-external'></i></a>
+                    </div>
+                </div>
+                <div class="row">
+                    <img src="images/unit.png">
                     <div class="layer">
                         <h5>Visual Design</h5>
                         <p>Check out 10 best Design's update for the top web design and Development companies.</p>
@@ -98,39 +133,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <img src="images/292.jpg">
-                    <div class="layer">
-                        <h5>Visual Design</h5>
-                        <p>Check out 10 best Design's update for the top web design and Development companies.</p>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
-                    </div>
-                </div>
-                <div class="row">
-                    <img src="images/292.jpg">
-                    <div class="layer">
-                        <h5>Visual Design</h5>
-                        <p>Check out 10 best Design's update for the top web design and Development companies.</p>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
-                    </div>
-                </div>
-                <div class="row">
-                    <img src="images/292.jpg">
-                    <div class="layer">
-                        <h5>Visual Design</h5>
-                        <p>Check out 10 best Design's update for the top web design and Development companies.</p>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
-                    </div>
-                </div>
-                <div class="row">
-                    <img src="images/292.jpg">
-                    <div class="layer">
-                        <h5>Visual Design</h5>
-                        <p>Check out 10 best Design's update for the top web design and Development companies.</p>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
-                    </div>
-                </div>
-                <div class="row">
-                    <img src="images/292.jpg">
+                    <img src="images/Screenshot (7).png">
                     <div class="layer">
                         <h5>Visual Design</h5>
                         <p>Check out 10 best Design's update for the top web design and Development companies.</p>
