--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <header>
-            <a href="#" class="logo">Cod<span>e</span>r.</a>
+            <a href="#" class="logo">Za<span>h</span>id.</a>
 
             <ul class="navlist">
                 <li><a href="#home" class="active">Home</a></li>
@@ -28,26 +28,26 @@
         <section class="home" id="home">
             <div class="home-text">
                 <div class="slide">
-                    <span class="one">Hello</span>
-                    <span class="two">I'm</span>
+                    <div>
+                        <span class="one">Hello</span>
+                        <span class="two">I'm</span>
+                    </div>
                 </div>
                 <h1>Zahid</h1>
                 <h3>Front-end<span> Developer.</span></h3>
-                <p>Web Developer with loads of experience that keep customers<br>
-                coming back for about services makes best effort.</p>
-                <dic class="button">
-                    <a href="#" class="btn">Say Hello</a>
+                <p>Web Developer with loads of experience that keep customers
+                coming back for the services I offer giving my best effort.</p>
+                <div class="button">
+                    <a href="#" type="email" target="_blank" class="btn">Say Hello</a>
                     <a href="#" class="btn2"><span><i class='bx bx-play'></i></span>Watch My Work</a>
-                </dic>
+                </div>
             </div>
-            <div>
-                <img src="images/255.jpg" class="imgh">
-            </div>
+            <img src="images/255.jpg" class="imgh">
         </section>
         <!-- about design -->
         <section class="about" id="about">
             <div class="about-img">
-                <img src="images/255.jpg">
+                <img src="images/292.jpg">
             </div>
             <div class="about-text">
                 <h2>About<span> Me</span></h2>
@@ -97,7 +97,7 @@
                     <div class="layer">
                         <h5>Travel Website</h5>
                         <p>A simple travel website I designed using HTML and CSS for a local customer</p>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
+                        <a href="https://cerulean-marigold-ef7d07.netlify.app/" target="_blank"><i class='bx bx-link-external'></i></a>
                     </div>
                 </div>
                 <div class="row">
@@ -105,7 +105,7 @@
                     <div class="layer">
                         <h5>Unit Converter</h5>
                         <p>A tool website that helps to convert metres to different units.</p>
-                        <a href="https://kaleidoscopic-cucurucho-2e8520.netlify.app/"><i class='bx bx-link-external'></i></a>
+                        <a href="https://kaleidoscopic-cucurucho-2e8520.netlify.app/" target="_blank"><i class='bx bx-link-external'></i></a>
                     </div>
                 </div>
                 <div class="row">
@@ -113,7 +113,7 @@
                     <div class="layer">
                         <h5>Basketball ScoreCard</h5>
                         <p>A simple frontend displaying the scorecard.</p>
-                        <a href="https://prismatic-sfogliatella-927924.netlify.app/"><i class='bx bx-link-external'></i></a>
+                        <a href="https://prismatic-sfogliatella-927924.netlify.app/" target="_blank"><i class='bx bx-link-external'></i></a>
                     </div>
                 </div>
                 <div class="row">
@@ -125,19 +125,19 @@
                     </div>
                 </div>
                 <div class="row">
-                    <img src="images/unit.png">
+                    <img src="images/Screenshot (9).png">
                     <div class="layer">
-                        <h5>Visual Design</h5>
-                        <p>Check out 10 best Design's update for the top web design and Development companies.</p>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
+                        <h5>Count Tracker</h5>
+                        <p>Website that helps to keep track of your counting.</p>
+                        <a href="https://thriving-churros-53024e.netlify.app/" target="_blank"><i class='bx bx-link-external'></i></a>
                     </div>
                 </div>
                 <div class="row">
-                    <img src="images/Screenshot (7).png">
+                    <img src="images/Screenshot (8).png">
                     <div class="layer">
-                        <h5>Visual Design</h5>
-                        <p>Check out 10 best Design's update for the top web design and Development companies.</p>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
+                        <h5>BlackJack</h5>
+                        <p>A simple Black Jack game made using Javascript.</p>
+                        <a href="https://stellular-cheesecake-aa66e3.netlify.app/" target="_blank"><i class='bx bx-link-external'></i></a>
                     </div>
                 </div>
             </div>
@@ -154,19 +154,20 @@
                     <li><a href="#">Like Share & Subscribe</a></li>
                 </div>
                 <div class="contact-icons">
-                    <a href="#"><i class='bx bxl-twitter'></i></a>
-                    <a href="#"><i class='bx bxl-github' ></i></a>
-                    <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
+                    <a href="https://twitter.com/ZOON_0223?t=K8_ASMewPmUhqnFenqEdAg&s=09" target="_blank"><i class='bx bxl-twitter'></i></a>
+                    <a href="https://github.com/Zahid232"><i class='bx bxl-github' target="_blank" ></i></a>
+                    <a href="https://www.linkedin.com/in/zahid-rashid-63bba4253" target="_blank"><i class='bx bxl-linkedin-square' ></i></a>
                 </div>
             </div>
             <div class="contact-form">
-                <form action="#">
-                    <input type="name" placeholder="Your Name" required>
-                    <input type="email" placeholder="Your Email Address" required>
-                    <input type="" placeholder="Your Mobile Number" required>
-                    <textarea name="" id="" cols="35" rows="10" placeholder="How can I help You?" required></textarea>
+                <form action="https://formsubmit.co/potexinu@mailgolem.com" method="post">
+                    <input type="name" name="Name" placeholder="Your Name" required>
+                    <input type="email" name="Email"  placeholder="Your Email Address" required>
+                    <input type="number" name="Number" placeholder="Your Mobile Number" required>
+                    <textarea name="Message" cols="35" rows="10" placeholder="How can I help You?" required></textarea>
                     <input type="submit" value="Send Message" class="submit" required>
                 </form>
+                
             </div>
         </section>
         <!-- contact section design -->
