--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 </div>
             </div>
             <div class="contact-form">
-                <form action="https://formsubmit.co/el/doyaju" method="post">
+                <form action="https://formsubmit.co/nakuzape@mailgolem.com" method="post">
                     <input type="name" name="Name" placeholder="Your Name" required>
                     <input type="email" name="Email"  placeholder="Your Email Address" required>
                     <input type="number" name="Number" placeholder="Your Mobile Number" required>
