--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <header>
-            <a href="#" class="logo">Za<span>h</span>id.</a>
+            <a href="#" class="logo">Z<span>a</span>hi<span>d</span></a>
 
             <ul class="navlist">
                 <li><a href="#home" class="active">Home</a></li>
@@ -36,10 +36,10 @@
                 <h1>Zahid</h1>
                 <h3>Front-end<span> Developer.</span></h3>
                 <p>Web Developer with loads of experience that keep customers
-                coming back for the services I offer giving my best effort.</p>
+                coming back for the services I offer, wherin I give my best effort.</p>
                 <div class="button">
-                    <a href="#" type="email" target="_blank" class="btn">Say Hello</a>
-                    <a href="#" class="btn2"><span><i class='bx bx-play'></i></span>Watch My Work</a>
+                    <a href="#contact" class="btn">Say Hello</a>
+                    <a href="#portfolio" class="btn2"><span><i class='bx bx-play'></i></span>Watch My Work</a>
                 </div>
             </div>
             <img src="images/255.jpg" class="imgh">
@@ -53,7 +53,7 @@
                 <h2>About<span> Me</span></h2>
                 <h4>Creative Web Developer!</h4>
                 <p>
-                    A front end developer has one general responsibility: to ensure that website visitors can easily interact with the page. They do this through the combination of design, technology and programming to code a website's appearance, as well as taking care of debugging.
+                    If I had one word to define myself, it would be Curious. I love finding new challenges and working on them. I have solved a few, and I am currently working on a few more. I have researched thousands of websites, looking for the best ones and understanding their user interface. Whatever I have learnt from this practice, I try to mix that up with my creativity, which helps me design eye-catching UI's.
                 </p>
                 <a href="#" class="btn">More About</a>
             </div>
@@ -149,9 +149,8 @@
                 <h4>If You Have Any Project In Your Mind</h4>
                 <p>I'm a Front-end Developer - creating bold and brave Front-ends for companies all across the world.</p>
                 <div class="list">
-                    <li><a href="#">9682181967</a></li>
+                    <li><a href="#">+91-9682181967</a></li>
                     <li><a href="#">rashidzahid819@gmail.com</a></li>
-                    <li><a href="#">Like Share & Subscribe</a></li>
                 </div>
                 <div class="contact-icons">
                     <a href="https://twitter.com/ZOON_0223?t=K8_ASMewPmUhqnFenqEdAg&s=09" target="_blank"><i class='bx bxl-twitter'></i></a>
