--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@
                 </div>
             </div>
             <div class="contact-form">
-                <form action="https://formsubmit.co/nakuzape@mailgolem.com" method="post">
-                    <input type="name" name="Name" placeholder="Your Name" required>
-                    <input type="email" name="Email"  placeholder="Your Email Address" required>
-                    <input type="number" name="Number" placeholder="Your Mobile Number" required>
-                    <textarea name="Message" cols="35" rows="10" placeholder="How can I help You?" required></textarea>
-                    <input type="submit" value="Send Message" class="submit" required>
+                <form action="#">
+                    <input type="name" name="Name" placeholder="Your Name" id="name" required>
+                    <input type="email" name="Email"  placeholder="Your Email Address" id="email" required>
+                    <input type="number" name="Number" placeholder="Your Mobile Number" id="number" required>
+                    <textarea name="Message" cols="35" rows="10" placeholder="How can I help You?" id="message" required></textarea>
+                    <input type="submit" value="Send Message" class="submit" onclick="chlbsdk()" required>
                 </form>
                 
             </div>
