--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </div>
             </div>
             <div class="contact-form">
-                <form action="#">
+                <form action="#" name="form" method="POST" data-netlify="true">
                     <input type="name" name="Name" placeholder="Your Name" id="name" required>
                     <input type="email" name="Email"  placeholder="Your Email Address" id="email" required>
                     <input type="number" name="Number" placeholder="Your Mobile Number" id="number" required>
